5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3987/executions/1573_1559.log
== TEST (2019-03-11 15:53:16) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.uper)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(frase.uper)
AttributeError: 'str' object has no attribute 'uper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:53:24) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper)
-- OUTPUT:
<built-in method upper of str object at 0x7ff1f6c7f9f0>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:54:23) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print.upper(frase.upper)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print.upper(frase.upper)
AttributeError: 'builtin_function_or_method' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:56:08) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper)
-- OUTPUT:
<built-in method upper of str object at 0x7fdae62459f0>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:56:19) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper)
-- EXECUTION TIME:
0.191596
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
<built-in method upper of str object at 0x7f38d684c4a8>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:55:56) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print.upper(frase)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print.upper(frase)
AttributeError: 'builtin_function_or_method' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:56:34) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase,upper)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(frase,upper)
NameError: name 'upper' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:58:00) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase,upper)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(frase,upper)
NameError: name 'upper' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:58:12) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print (frase,upper)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print (frase,upper)
NameError: name 'upper' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:58:43) 
-- CODE:
frase = ("Ada Lovelace foi a primeira programadora da historia.")
print(frase,upper)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(frase,upper)
NameError: name 'upper' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:59:35) 
-- CODE:
print("Ada Lovelace foi a primeira programadora da historia.",upper)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print("Ada Lovelace foi a primeira programadora da historia.",upper)
NameError: name 'upper' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:00:03) 
-- CODE:
print("Ada Lovelace foi a primeira programadora da historia.".upper)

-- OUTPUT:
<built-in method upper of str object at 0x7fa31e2f49f0>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:00:52) 
-- CODE:
print("Ada Lovelace foi a primeira programadora da historia.".upper())

-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:00:57) 
-- CODE:
print("Ada Lovelace foi a primeira programadora da historia.".upper())

-- EXECUTION TIME:
0.139804
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
